--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row p-t-lg p-b-lg">
         	<div class="col-1-2 center-block txt-uppercase txt-center">
             	<h1>Good ideas come First!</h1>
-            </div>
+			</div>
         </div>
     </div>
 </header>
@@ -51,13 +51,13 @@
 <!-- ===========OUR SERVICES=============== -->
 
 <section class="p-t-lg p-b-xl" id="services">
-	<header class="wrapper">
+	<div class="wrapper">
     	<div class="row txt-center">
-        	<div class="col-9-12 center-block">
+        	<header class="col-9-12 center-block">
             	<h2 class=" txt-uppercase">Our Services</h2>
                 <p class="lead txt-uppercase">Lorem ipsum dolor sit amet, usu <span>nemore oporteat</span> lobortis ad, eos soleat verear cotidieque id. </p>
-                <p>Vis te veri tritani, at quodsi commune has, probo maiestatis ei has. Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, & indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et. </p>
-            </div>
+                <p>Vis te veri tritani, at quodsi commune has, probo maiestatis ei has. Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, &amp; indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et. </p>
+            </header>
         </div>
         <div class="row txt-center">
         	<section class="col-1-4">
@@ -70,7 +70,9 @@
             </section>
             <section class="col-1-4">
             	<div>
-                    <h3 class="txt-uppercase">Design</h3>
+                   	<header>
+                    	<h3 class="txt-uppercase">Design</h3>
+					</header>
                     <p>Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et.</p>
                 </div>
             </section>
@@ -84,20 +86,22 @@
             </section>
             <section class="col-1-4">
             	<div>
-                    <h3 class="txt-uppercase">Launch</h3>
+                   	<header>
+                    	<h3 class="txt-uppercase">Launch</h3>
+					</header>
                     <p>Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et. Ea cum diam malorum vivendum.</p>
                 </div>
             </section>
         </div>
-    </header>
+    </div>
 </section>
 
 
 <footer class="p-t-lg p-b-lg" id="contact">
-	<header class="wrapper">
+	<div class="wrapper">
     	<div class="row txt-center">
         	<div class="col-9-12 center-block">
-            	<h2 class=" txt-uppercase">Contact Us</h2>
+            	<h2 class="txt-uppercase">Contact Us</h2>
                 <p>Vis te veri tritani, at quodsi commune has, probo maiestatis ei has. Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et. </p>
             </div>
         </div>
@@ -107,18 +111,15 @@
                     <div class="col-1-2">
                     	<h3>Address</h3>
                         <h4>Zendesk</h4>
-                        <p class="m-t-0 m-b-lg">123 Fake Street<br/>
+                        <address><p class="m-t-0 m-b-lg">123 Fake Street<br/>
                         Fakersvill, FA 12345-1234</p>
-                        <dl>
-                        	<dt>Phone:</dt>
-                            <dd>123.123.1234</dd><br/>
-                            <dt>Fax:</dt>
-                            <dd>123.123.1234</dd><br/>
-                            <dt>Email:</dt>
-                            <dd>hello@zendesk.com</dd><br/>
-                            <dt>Skype:</dt>
-                            <dd>Zendesk</dd>
-                        </dl>
+						</address>
+                        <ul>
+                        	<li>Phone: <a href="tel:123.123.1234"><span>123.123.1234</span></a></li>
+                            <li>Fax: <span>123.123.1234</span></li>
+                            <li>Email: <a href="mailto:hello@zendesk.com"><span>hello@zendesk.com</span></a></li>
+                            <li>Skype: <span>Zendesk</span></li>
+                        </ul>
                     </div>
                     <div class="col-1-2" id="map">
                     </div>
@@ -127,12 +128,12 @@
             <div class="col-1-2 p-t-lg">
                 <form class="row">
                 	<div class="col-1-2">
-                    <label>First & Last Name:</label>
+                    <label>First &amp; Last Name:</label>
                     <input  name="name" type="text" value="" placeholder="Name"/>
                     </div>
                     <div class="col-1-2">
                         <label>Your email:</label>
-                        <input name="email" type="text" placeholder="Email" />
+                        <input name="email" type="text" placeholder="Email"/>
                     </div>
                     <div class="col-1">
                         <label for="message">Your message:</label>
@@ -144,7 +145,7 @@
                 </form>
             </div>
         </div>
-    </header>
+    </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
